--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -1,3 +1,8 @@
 .header-title {
     margin-left: 20px;
 }
+.app-bar{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
